--- a/blog-editor.html
+++ b/blog-editor.html
@@ -99,6 +99,73 @@ h1{margin:0 0 24px 0;font-size:28px}
   margin-bottom:6px;
 }
 
+/* Quill Editor Dark Theme */
+.ql-toolbar.ql-snow{
+  border:1px solid rgba(255,255,255,.2);
+  border-bottom:none;
+  background:rgba(255,255,255,.08);
+  border-radius:8px 8px 0 0;
+  padding:12px;
+}
+.ql-container.ql-snow{
+  border:1px solid rgba(255,255,255,.2);
+  background:rgba(255,255,255,.08);
+  border-radius:0 0 8px 8px;
+  font-family:inherit;
+  font-size:14px;
+  min-height:500px;
+}
+.ql-editor{
+  min-height:500px;
+  color:#fff;
+  font-size:14px;
+  line-height:1.6;
+}
+.ql-editor.ql-blank::before{
+  color:#999;
+  font-style:normal;
+}
+.ql-snow .ql-stroke{stroke:#ccc}
+.ql-snow .ql-fill{fill:#ccc}
+.ql-snow .ql-picker{color:#ccc}
+.ql-snow .ql-picker-options{background:#1a1a1a;border:1px solid rgba(255,255,255,.2)}
+.ql-snow .ql-picker-label{color:#ccc}
+.ql-snow .ql-picker-label:hover{color:#fff}
+.ql-toolbar.ql-snow .ql-picker-item:hover{color:#e11d2e}
+.ql-snow.ql-toolbar button:hover,
+.ql-snow .ql-toolbar button:hover,
+.ql-snow.ql-toolbar button.ql-active,
+.ql-snow .ql-toolbar button.ql-active{
+  color:#e11d2e;
+}
+.ql-snow.ql-toolbar button:hover .ql-stroke,
+.ql-snow .ql-toolbar button:hover .ql-stroke,
+.ql-snow.ql-toolbar button.ql-active .ql-stroke,
+.ql-snow .ql-toolbar button.ql-active .ql-stroke{
+  stroke:#e11d2e;
+}
+.ql-snow.ql-toolbar button:hover .ql-fill,
+.ql-snow .ql-toolbar button:hover .ql-fill,
+.ql-snow.ql-toolbar button.ql-active .ql-fill,
+.ql-snow .ql-toolbar button.ql-active .ql-fill{
+  fill:#e11d2e;
+}
+.ql-editor h1,
+.ql-editor h2,
+.ql-editor h3,
+.ql-editor h4{
+  color:#fff;
+  font-weight:700;
+  margin-top:1em;
+  margin-bottom:0.5em;
+}
+.ql-editor p{
+  margin-bottom:1em;
+}
+.ql-editor a{
+  color:#e11d2e;
+}
+
 @media(max-width:968px){
   .editor-layout{grid-template-columns:1fr}
   .editor-sidebar{position:static}
@@ -177,18 +244,8 @@ h1{margin:0 0 24px 0;font-size:28px}
                 Prevedi v EN →
               </button>
             </div>
-            <textarea id="content-sl" class="content-field" placeholder="Napišite vsebino članka...
-
-Lahko uporabite HTML oznake za oblikovanje:
-- <h2>Naslov 2</h2>
-- <h3>Naslov 3</h3>
-- <p>Odstavek</p>
-- <strong>Krepko besedilo</strong>
-- <em>Poševno besedilo</em>
-- <ul><li>Element seznama</li></ul>
-- <a href='url'>Povezava</a>
-- <img src='url' alt='opis'>"></textarea>
-            <p class="help-text">Napišite vsebino članka. HTML je podprt za oblikovanje.</p>
+            <div id="editor-sl"></div>
+            <p class="help-text">Uporabite orodja za oblikovanje besedila. Izberite naslove (H1-H4), odstavke, krepko/poševno besedilo, sezname in povezave.</p>
           </div>
         </div>
 
@@ -228,18 +285,8 @@ Lahko uporabite HTML oznake za oblikovanje:
                 ← Translate to SL
               </button>
             </div>
-            <textarea id="content-en" class="content-field" placeholder="Write your article content here...
-
-You can use HTML tags for formatting:
-- <h2>Heading 2</h2>
-- <h3>Heading 3</h3>
-- <p>Paragraph</p>
-- <strong>Bold text</strong>
-- <em>Italic text</em>
-- <ul><li>List item</li></ul>
-- <a href='url'>Link</a>
-- <img src='url' alt='description'>"></textarea>
-            <p class="help-text">Write your article content. HTML is supported for formatting.</p>
+            <div id="editor-en"></div>
+            <p class="help-text">Use the formatting toolbar to style your text. Choose headings (H1-H4), paragraphs, bold/italic text, lists, and links.</p>
           </div>
         </div>
       </div>
@@ -293,6 +340,10 @@ You can use HTML tags for formatting:
   </form>
 </div>
 
+<!-- Quill Rich Text Editor -->
+<link href="https://cdn.quilljs.com/1.3.7/quill.snow.css" rel="stylesheet">
+<script src="https://cdn.quilljs.com/1.3.7/quill.min.js"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script src="/js/supabaseClient.js"></script>
 
@@ -300,6 +351,8 @@ You can use HTML tags for formatting:
 let categories = [];
 let articleId = null;
 let currentLang = 'sl';
+let quillSl;
+let quillEn;
 
 (async()=>{
   try {
@@ -311,6 +364,7 @@ let currentLang = 'sl';
     console.log("Article ID from URL:", articleId);
 
     await loadCategories();
+    initializeEditors();
 
     if(articleId){
       await loadArticle();
@@ -322,6 +376,32 @@ let currentLang = 'sl';
     showStatus("Failed to load editor: " + error.message, "error");
   }
 })();
+
+function initializeEditors(){
+  const toolbarOptions = [
+    [{ 'header': [1, 2, 3, 4, false] }],
+    ['bold', 'italic', 'underline'],
+    [{ 'list': 'ordered'}, { 'list': 'bullet' }],
+    ['link', 'image'],
+    ['clean']
+  ];
+
+  quillSl = new Quill('#editor-sl', {
+    theme: 'snow',
+    modules: {
+      toolbar: toolbarOptions
+    },
+    placeholder: 'Napišite vsebino članka...'
+  });
+
+  quillEn = new Quill('#editor-en', {
+    theme: 'snow',
+    modules: {
+      toolbar: toolbarOptions
+    },
+    placeholder: 'Write your article content here...'
+  });
+}
 
 function setupLanguageTabs(){
   const tabs = document.querySelectorAll('.language-tab');
@@ -398,11 +478,9 @@ async function loadArticle(){
   // Small delay to ensure DOM is ready
   await new Promise(resolve => setTimeout(resolve, 50));
 
-  // Populate fields with explicit checks
+  // Populate fields
   const titleSlField = document.getElementById("title-sl");
   const titleEnField = document.getElementById("title-en");
-  const contentSlField = document.getElementById("content-sl");
-  const contentEnField = document.getElementById("content-en");
 
   if(titleSlField) titleSlField.value = data.title_sl || "";
   if(titleEnField) titleEnField.value = data.title_en || "";
@@ -412,17 +490,15 @@ async function loadArticle(){
   document.getElementById("excerpt-sl").value = data.excerpt_sl || "";
   document.getElementById("excerpt-en").value = data.excerpt_en || "";
 
-  if(contentSlField) {
-    contentSlField.value = data.content_sl || "";
-    console.log("Set content-sl field, length:", contentSlField.value.length);
+  // Set Quill editor content
+  if(quillSl && data.content_sl) {
+    quillSl.root.innerHTML = data.content_sl;
+    console.log("Set content-sl in Quill, length:", data.content_sl.length);
   }
 
-  if(contentEnField) {
-    contentEnField.value = data.content_en || "";
-    console.log("Set content-en field, length:", contentEnField.value.length);
-    console.log("Content preview:", data.content_en?.substring(0, 50));
-  } else {
-    console.error("content-en field not found!");
+  if(quillEn && data.content_en) {
+    quillEn.root.innerHTML = data.content_en;
+    console.log("Set content-en in Quill, length:", data.content_en.length);
   }
 
   document.getElementById("image").value = data.featured_image_url || "";
@@ -442,17 +518,26 @@ async function loadArticle(){
 }
 
 async function translateField(field, fromLang, toLang){
-  const sourceId = `${field}-${fromLang}`;
-  const targetId = `${field}-${toLang}`;
+  let sourceValue;
 
-  const sourceValue = document.getElementById(sourceId).value.trim();
+  // Get content from appropriate source
+  if(field === 'content'){
+    const sourceEditor = fromLang === 'sl' ? quillSl : quillEn;
+    sourceValue = sourceEditor.root.innerHTML.trim();
+    // Check if it's just empty tags
+    if(sourceValue === '<p><br></p>' || sourceValue === '<p></p>'){
+      sourceValue = '';
+    }
+  } else {
+    const sourceId = `${field}-${fromLang}`;
+    sourceValue = document.getElementById(sourceId).value.trim();
+  }
 
   if(!sourceValue){
     showStatus(`Please enter ${field} in ${fromLang.toUpperCase()} first`, "error");
     return;
   }
 
-  const targetField = document.getElementById(targetId);
   const translateBtn = event.target;
   const originalText = translateBtn.textContent;
 
@@ -495,7 +580,15 @@ async function translateField(field, fromLang, toLang){
       throw new Error(result.error || 'Translation failed');
     }
 
-    targetField.value = result.translation;
+    // Set content to appropriate target
+    if(field === 'content'){
+      const targetEditor = toLang === 'sl' ? quillSl : quillEn;
+      targetEditor.root.innerHTML = result.translation;
+    } else {
+      const targetId = `${field}-${toLang}`;
+      document.getElementById(targetId).value = result.translation;
+    }
+
     showStatus('Translation completed successfully!', 'success');
   } catch(error){
     console.error('Translation error:', error);
@@ -511,8 +604,14 @@ document.getElementById("blogForm").addEventListener("submit", async (e) => {
 
   const titleSl = document.getElementById("title-sl").value.trim();
   const titleEn = document.getElementById("title-en").value.trim();
-  const contentSl = document.getElementById("content-sl").value.trim();
-  const contentEn = document.getElementById("content-en").value.trim();
+
+  // Get content from Quill editors
+  let contentSl = quillSl.root.innerHTML.trim();
+  let contentEn = quillEn.root.innerHTML.trim();
+
+  // Check if content is just empty tags
+  if(contentSl === '<p><br></p>' || contentSl === '<p></p>') contentSl = '';
+  if(contentEn === '<p><br></p>' || contentEn === '<p></p>') contentEn = '';
 
   if(!titleSl && !titleEn){
     showStatus("Please enter a title in at least one language", "error");
