--- a/public/content-editor.html
+++ b/public/content-editor.html
@@ -454,6 +454,16 @@
               </div>
               <div>
                 <div class="field-group">
+                  <label class="field-label">Promotional Sales Title</label>
+                  <input type="text" class="field-input" data-path="services.market.promotional.title" value="${content.services?.market?.promotional?.title || ''}">
+                </div>
+                <div class="field-group">
+                  <label class="field-label">Promotional Sales Description</label>
+                  <textarea class="field-input field-textarea" data-path="services.market.promotional.description">${content.services?.market?.promotional?.description || ''}</textarea>
+                </div>
+              </div>
+              <div>
+                <div class="field-group">
                   <label class="field-label">B2B Support Title</label>
                   <input type="text" class="field-input" data-path="services.market.b2b.title" value="${content.services?.market?.b2b?.title || ''}">
                 </div>
